RESOLVED FIXED312602
canva.com: web content crash when moving elements around. (WebCore::LayoutIntegration::BoxGeometryUpdater::updateLayoutBoxDimensions)
https://bugs.webkit.org/show_bug.cgi?id=312602
Summary canva.com: web content crash when moving elements around. (WebCore::LayoutInt...
Sammy Gill
Reported 2026-04-17 14:17:14 PDT
1. Canva.com 2. Log into an account 3. Create a new document from a template like one pager 4. Tap on any element on the page that has 3 lines to move it around (looks like a slider) 5. Use on above the element with the three lines to move the element around
Attachments
Sammy Gill
Comment 1 2026-04-17 14:17:28 PDT
Sammy Gill
Comment 2 2026-04-17 14:39:50 PDT
EWS
Comment 3 2026-04-19 16:27:38 PDT
Committed 311552@main (889513d41a34): <https://commits.webkit.org/311552@main> Reviewed commits have been landed. Closing PR #63004 and removing active labels.
Sammy Gill
Comment 4 2026-04-22 15:05:00 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59416
Note You need to log in before you can comment on or make changes to this bug.