Source/WebCore/layout/integration/grid/LayoutIntegrationGridLayout.cpp
@@ -50,6 +50,13 @@ GridLayout::GridLayout(RenderGrid& renderGrid)
 {
 }
 
+GridLayout::~GridLayout()
+{
+    CheckedRef renderer = gridBoxRenderer();
+    const_cast<CheckedPtr<Layout::ElementBox>&>(m_gridBox) = nullptr;
+    BoxTreeUpdater { renderer }.tearDown();
+}
+
 void GridLayout::updateFormattingContextGeometries()
 {
     auto boxGeometryUpdater = BoxGeometryUpdater { layoutState(), gridBox() };
